--- a/Capstone-Group2/CSS/about.css
+++ b/Capstone-Group2/CSS/about.css
@@ -4,9 +4,13 @@
     *{
         margin: 0;
         padding: 0;
-        font-size: 25px;
+        font-size: 20px;
         line-height: 1.5;
+        color: #8CA0A1;
         
+    }
+    nav{
+        background-color: #C5E7E7;
     }
     nav ul{
         list-style-type: none;
@@ -21,4 +25,19 @@
         color: grey;
         
     
+    }
+    h1{
+        font-size: 56px;
+        
+    }
+    .row{
+        width: 470px;
+        display: inline-block;
+        padding: 25px;
+        box-sizing:border-box;
+        vertical-align: top;
+        text-align: center;
+    }
+    footer{
+        background-color: #0B334A;
     }
