--- a/get-involved.css
+++ b/get-involved.css
@@ -1,4 +1,27 @@
 body{
     font-family:'Poppins', 'Times', 'sans-serif';
 }
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #C5E7E7;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #8CA0A1 (blue) on hover */
+  li a:hover {
+    background-color: #8CA0A1;
+  }
