--- a/get-involved.css
+++ b/get-involved.css
@@ -1,6 +1,8 @@
 body{
     font-family:'Poppins', 'Times', 'sans-serif';
+    color: #8CA0A1;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
