--- a/Capstone-Group2/CSS/get-involved.css
+++ b/Capstone-Group2/CSS/get-involved.css
@@ -9,6 +9,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #C5E7E7;
+    
   }
   
   li {
@@ -41,10 +42,44 @@ ul {
   font-size: 56px;
 }
 .volunteer{
- display: grid;
+display: flex;
+align-items: center;
 }
 .support-img{
   float: right;
-  border-radius: 27px;
-  margin-left: 0px;
+  border-radius: 20px;
+  margin-left: 20px;
+  max-width: 100%;
+  width: 400px;
+  height: 400px;
+}
+.info{
+  float: left;
+  padding-right: 50px;
+}
+.foster{
+  display: flex;
+  
+}
+.foster-image{
+  float: left;
+  border-radius: 20px;
+  margin-right: 20px;
+  max-width: 100%;
+  width: 300px;
+  height: 400px;
+}
+.foster-info{
+float: right;
+text-align: right;
+}
+.donate{
+  padding-top: 60px;
+}
+.donate-image{
+  max-width: 100%;
+  border-radius: 20px;
+}
+.footer{
+  background-color: #0B334A;
 }
