--- a/Capstone-Group2/CSS/get-involved.css
+++ b/Capstone-Group2/CSS/get-involved.css
@@ -28,6 +28,16 @@ ul {
   li a:hover {
     background-color: #8CA0A1;
   }
+  .header::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); /* Change the color and opacity as needed */
+  }
 .header{
   max-width: 100%;
   height: auto;
@@ -44,21 +54,32 @@ ul {
 .volunteer{
 display: flex;
 align-items: center;
+padding-top: 60px;
+}
+.support{
+  padding-top: 60px;
+  text-align: center;
+}
+.support-header{
+  font-size: 40px;
 }
 .support-img{
   float: right;
   border-radius: 20px;
   margin-left: 20px;
   max-width: 100%;
-  width: 400px;
+  width: 1080px;
   height: 400px;
+  padding-right: 20px;
 }
 .info{
   float: left;
   padding-right: 50px;
+  padding-left: 20px;
 }
 .foster{
   display: flex;
+  padding-top: 60px;
   
 }
 .foster-image{
@@ -66,20 +87,80 @@ align-items: center;
   border-radius: 20px;
   margin-right: 20px;
   max-width: 100%;
-  width: 300px;
+  width: 800px;
   height: 400px;
+  padding-left: 20px;
 }
 .foster-info{
 float: right;
 text-align: right;
+padding-right: 20px;
 }
 .donate{
+  display: flex;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 .donate-image{
+  float: right;
   max-width: 100%;
+  width: 500px;
+  height: 400px;;
   border-radius: 20px;
+  margin-left: 20px;
+}
+.donate-info{
+  float: left;
+  text-align: left;
+  padding-left: 20px;;
 }
 .footer{
   background-color: #0B334A;
+  color: white;
+}
+.footer-header{
+text-align: center;
+padding-top: 20px;
+}
+.footer-info{
+  padding-left: 20px;
+}
+.contact-info{
+  font-weight: lighter;
+  display: flex;
+  justify-content: left;
+}
+.fav{
+  color: aliceblue;
+}
+.footer-logos{
+  display: flex;
+  justify-content: right;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+.logo-1{
+  display: flex;
+  width: 100px;
+  height: 100px;
+  justify-content:right;
+  padding-right: 10px;
+}
+
+.logo-2{
+  display: flex;
+  width: 100px;
+  justify-content: flex-end;
+}
+.click{
+  background-color: #D18A71;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+  font-family:'Poppins';
 }
