--- a/CSS/get-involved.css
+++ b/CSS/get-involved.css
@@ -116,11 +116,11 @@ padding-right: 20px;
 }
 .footer{
   background-color: #0B334A;
-  color: white;
 }
 .footer-header{
 text-align: center;
 padding-top: 20px;
+color: white;
 }
 .footer-info{
   padding-left: 20px;
@@ -163,4 +163,7 @@ padding-top: 20px;
   font-size: 16px;
   border-radius: 20px;
   font-family:'Poppins';
+}
+.fa{
+  color: #8CA0A1;
 }
