--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -23,6 +23,7 @@ header img{
     width: 298px;
     height: 74px;
     float: left;
+    padding-left:5px;
 
 }
 
@@ -63,10 +64,12 @@ nav a{
 
 #myVideo{
     position: relative;
-    left: -26vw;
     top: 100px;
-    padding: 5px;
-    min-width: 100vw;
+    width: 100vw;
+    height: 70vh;
+    object-fit: cover;
+    left: -9px;
+    z-index: -1;
 
 }
 
@@ -74,7 +77,6 @@ h1{
     font-size: 96px;
     color: white;
 
-    
 }
 h2{
     font-size: 46px;
@@ -86,13 +88,35 @@ h2{
     display:inline-flex;
 }
 
-.petimg{
+img {
     width: 325px;
     height: 355px;
-    border-radius: 27px;
+    border-radius: 50px;
+    border: red;
 
 }
 
 .petbox:hover{
 
+}
+
+
+
+
+
+
+
+
+
+
+/* this media querry is for video to not play on mobile devices. 
+Replaces video with thumbnail image. 
+Issues: image thumbnail does not show */
+
+@media (max-width: 750px) {
+    #myVideo { display: none; }
+    body { 
+      background: url("/Images/adopt-video-thumb.png") no-repeat;
+      background-size: cover;
+    }
 }
