--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -77,6 +77,7 @@ h1{
     font-size: 96px;
     color: white;
 
+
 }
 h2{
     font-size: 46px;
@@ -88,20 +89,66 @@ h2{
     display:inline-flex;
 }
 
-img {
+.petimg{
+    position: relative;
     width: 325px;
     height: 355px;
     border-radius: 50px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+
+}
+
+img {
+    width: 100%;
+    border-radius: 50px;
     border: red;
+    display: block;
 
 }
 
-.petbox:hover{
 
+.petimg__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    background: rgba(0,0,0,0.73);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
 }
 
+.petimg__overlay--blur{
+    backdrop-filter: blur(5px);
+}
 
+.petimg__overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
 
+.petimg__overlay:hover{
+    opacity: 1;
+}
+
+.petimg__overlay:hover > * {
+    transform: translateY(0);
+}
+
+.pet-name{
+    font-size: 1.5em;
+    
+}
+
+.breed{
+    font-size: 1.25em;
+    margin-top: 0.25em;
+}
 
 
 
@@ -111,12 +158,12 @@ img {
 
 /* this media querry is for video to not play on mobile devices. 
 Replaces video with thumbnail image. 
-Issues: image thumbnail does not show */
+Issues: have to adjust other divs,currently everything just covers image. */
 
 @media (max-width: 750px) {
     #myVideo { display: none; }
     body { 
       background: url("/Images/adopt-video-thumb.png") no-repeat;
-      background-size: cover;
+     
     }
 }
