--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,2 +1,99 @@
-/* THIS IS THE CSS PAGE FOR THE 
-    INDEX.HTML LANDING PAGE*/
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap" rel="stylesheet">
+    <title>Motley Zoo Animal Rescue</title>
+</head>
+<body>
+  <div class="container">
+    <div class="logo">
+      <img src="./Capstone-Group2/Images/logo.png" alt="" width="130" />
+      
+    <nav>
+        <ul>
+          <li><a href="#">Adopt!</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Get Involved</a></li>
+          <li><a href="#">Shop Merch</a></li>
+          <li><a href="#">More</a></li>
+        </ul>
+      </nav>
+    </div>
+      </div>
+      <div id="pup">
+     <img src="https://raw.githubusercontent.com/Diamanefrazier/Capstone-Group2/main/Capstone-Group2/Images/puppies.jpg" alt="puppies" height="400"  width="715">
+    </div>
+  
+     <div id="leftside">
+     <img src="https://raw.githubusercontent.com/Diamanefrazier/Capstone-Group2/main/Capstone-Group2/Images/Sparrow.jpg" alt="cute puppy"style="width:170px;height:170px;margin-left:15px;" >
+    </div>
+    <h2>Our Mission</h2>
+     <p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
+   <h2>Our Impact</h2>
+     <p>Motley Zoo has a 99% live release rate. This means that while less than 1% of the animals we've rescued have died or were humanely euthanized, we have saved 99% of them! In comparison, Washington state has an approximate 90% live release rate. In all, we are doing pretty well in the northwest.<br>However in some states, live release falls to a deplorable 40%. This means in many places around our country, more than half of the animals in shelters are put to death.</p>
+    <div id="section">
+     <div class="grid">
+   <img src="./Capstone-Group2/Images/Nathan-Rhodes.jpg" alt="brown dog">
+   <div class="card"><img src="./Capstone-Group2/Images/cat 1.jpeg" alt="grey cat"></div>
+   <div class="card"><img src="./Capstone-Group2/Images/cat 2.jpeg" alt="black cat"></div>
+   <div class="card"><img src="./Capstone-Group2/Images/cat 3.jpg" alt="black and white cat"></div>
+   <div class="card"><img src="./Capstone-Group2/Images/dog 1.jpeg" alt="brown dog"></div>
+  <div class="card"><img src="./Capstone-Group2/Images/dog 4.jpg" alt="happy dog"></div>
+   <div class="card"><img src="./Capstone-Group2/Images/ikaika 3.jpg" alt="white dog"></div>
+  <div class="card"><img src="./Capstone-Group2/Images/kittens.jpg" alt="kittens"></div>
+</div>
+</div>
+    <h2>Happy Tails: Success Stories</h2>
+     <h3>Ikaika and Julie</h3>
+     <p>Ikaika came to Motley Zoo from Maui, where he'd been overlooked in the shelter one too many times. 
+        He was hand selected by a Motley Zoo foster teen who was battling cancer. She'd been granted her "Make a Wish" which she put toward flying dogs from Hawaii to Seattle where they had a better chance of adoption!
+        Ikaika was with us for a while- seemingly being overlooked here too. But when his new mom saw him, she couldn't resist his charming personality and winning smile, falling head over heels for him!
+        Now Ikaika has a comfortable, loving home to spend the rest of his golden years!</p>
+       <h3>Barry Manilow and Family</h3>
+       <p>Barry Manilow came to us from California, when his family had to give him up due to a terminal illness in the family.
+            He arrived pretty matted, with significant cataracts but a heart of gold...and it was only a matter of time until he crooned his way into the heart of his new family who can't smile without him!
+            Barry especially fell for the daughter's dog and he follows her around like a puppy!
+            Now he lives the life of a rock star with his loving family and runs around barking, "Looks like we made it"!</p>
+            <img src="https://raw.githubusercontent.com/sawebb-78/Capstone-Group2/main/Images/volunteer.jpg" alt="Volunteer">
+
+            <footer>
+                <div class="footer">
+                    <h2 class="footer-header">Motley Zoo Animal Rescue
+                </h210>
+                <h3 class="follow-info">Follow Us</h3>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-vimeo"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-pinterest"></a>
+                <h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
+                    @2023 | Motley Zoo Animal Rescue
+                </h4>
+                <section id="footer_images">
+                <div class="footer_badges">
+                <img src="Images\wa fed.jpg" alt="logo of The Washington Federation">
+                </div>
+                <div class="footer_badges">
+                <a href="https://www.adoptapet.com/">
+                <img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
+                </a>
+                </div>
+                </section>
+                </div>
+                </footer>
+
+    
+
+
+
+    <script src="/script.js"></script>
+</body>
+</html>
