--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -1,70 +1,80 @@
 /* THIS IS THE CSS PAGE FOR THE 
             ADOPT.HTML */
 
-*{
+* {
     font-size: 20px;
     line-height: 1.5;
     color: #8CA0A1;
-    font-family:'Poppins', 'Times', 'sans-serif';
-    color:#8CA0A1 ;
+    font-family: 'Poppins', 'Times', 'sans-serif';
+    color: #8CA0A1;
+    box-sizing: border-box;
 }
-header{
+
+header {
     position: absolute;
     width: 100vw;
     height: 114px;
     left: 0px;
     top: 0px;
     background: #C5E7E7;
-    
+
 }
 
-header img{
+header img {
     position: absolute;
     width: 298px;
     height: 74px;
     float: left;
-    padding-left:5px;
+    padding-left: 5px;
 
 }
 
 
-nav{
+
+
+nav {
     background-color: #C5E7E7;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #C5E7E7;
-    }
-nav ul{
+}
+
+nav ul {
     list-style-type: none;
-    text-align:  right;
+    text-align: right;
     float: right;
 }
-nav li{
+
+nav li {
     display: inline-block;
     padding: 25px 25px 30px 30px;
 }
+
 nav li:hover {
     background-color: #8CA0A1;
     color: white;
 }
+
 nav a:hover {
     color: white;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: grey;
-    
-    
+
+
 
 }
 
-#myVideo{
-    position: relative;
-    top: 100px;
+#myVideo {
+    position: absolute;
+    top: -1px;
     width: 100vw;
     height: 70vh;
     object-fit: cover;
@@ -73,23 +83,37 @@ nav a{
 
 }
 
-h1{
+#myVideo__overlay {
+    background: rgba(0, 0, 0, 0.06);
+    position: absolute;
+    width: 100%;
+    height: 70vh;
+    top: 115px;
+}
+
+#adopt {
     font-size: 96px;
     color: white;
+    position: absolute;
+    top: 10vh;
+    left: 0;
 
 
 }
-h2{
+
+h2 {
     font-size: 46px;
 
 }
 
 
-#looking-for-home-section{
-    display:inline-flex;
+#looking-for-home-section {
+    display: flex;
+    position: absolute;
+    top: 699px;
 }
 
-.petimg{
+.petimg {
     position: relative;
     width: 325px;
     height: 355px;
@@ -100,21 +124,22 @@ h2{
 
 }
 
-img {
+#petimg-1,
+#petimg-2,
+#petimg-3 {
     width: 100%;
     border-radius: 50px;
-    border: red;
     display: block;
 
 }
 
 
-.petimg__overlay{
+.petimg__overlay {
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 50px;
-    background: rgba(0,0,0,0.73);
+    background: rgba(0, 0, 0, 0.73);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -123,84 +148,235 @@ img {
     transition: opacity 0.25s;
 }
 
-.petimg__overlay--blur{
+.petimg__overlay--blur {
     backdrop-filter: blur(5px);
 }
 
-.petimg__overlay > * {
+.petimg__overlay>* {
     transform: translateY(20px);
     transition: transform 0.25s;
 }
 
-.petimg__overlay:hover{
+.petimg__overlay:hover {
     opacity: 1;
 }
 
-.petimg__overlay:hover > * {
+.petimg__overlay:hover>* {
     transform: translateY(0);
 }
 
-.pet-name{
+.pet-name {
     font-size: 1.5em;
-    
+
 }
 
-.breed{
+.breed {
     font-size: 1.25em;
     margin-top: 0.25em;
 }
 
+input[type=text] {
+    padding: 10px;
+    margin: 10px 0;
+    border: 0;
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 10px;
+    width: 100%;
+    transition: .3s box-shadow;
 
-.footer{
+}
+
+input[type=text]:hover {
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+button {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    width: auto;
+    background-color: rgba(209, 138, 113, 1);
+    font-weight: bold;
+    color: white;
+    margin: 10px 0;
+    transition: .3s background-color;
+
+}
+
+button:hover {
+    background-color: rgba(133, 85, 91, 1);
+    color: #8CA0A1;
+}
+
+input[type=submit] {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    width: auto;
+    background-color: rgba(209, 138, 113, 1);
+    font-weight: bold;
+    color: white;
+    margin: 10px 0;
+    transition: .3s background-color;
+    text-align: center;
+    position: absolute;
+    right: 5px;
+
+}
+
+input[type=submit]:hover {
+    background-color: rgba(133, 85, 91, 1);
+    color: #8CA0A1;
+}
+
+textarea {
+    width: 100%;
+    resize: vertical;
+    padding: 15px;
+    border: 0;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+    height: 150px;
+    transition: .3s box-shadow;
+
+}
+
+textarea:hover {
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+
+
+/* Form validation */
+
+input:invalid {
+    border-color: #900;
+    background-color: #fdd;
+}
+
+input:focus:invalid {
+    outline: none;
+}
+
+.error {
+    width: 100%;
+    padding: 0;
+
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: 0.3em;
+}
+
+
+.message{
+    width: 100%;
+    position: relative;
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
+}
+
+.message .success{
+    font-size: 20px;
+    position: absolute;
+    animation: buttons .3s linear;
+    display: none;
+
+}
+
+.message .danger{
+    color: red;
+    position: absolute;
+    font-size: 20px;
+    animation: buttons .3s linear;
+    display: none;
+}
+
+@keyframes buttons{
+    0% {
+        transform: scale(0.1);
+    }
+    50%{
+        transform: scale(0.5);
+    }
+    100%{
+        transform:scale(1);
+    }
+
+}
+
+/*Footer CSS*/
+
+
+.footer {
     background-color: #0B334A;
-  }
-  .footer h1{
+}
+
+.footer h1 {
     font-size: 46px;
-  }
-  .footer-header{
-  text-align: center;
-  padding-top: 20px;
-  color: white;
-  }
-  .footer-info{
+}
+
+.footer-header {
+    text-align: center;
+    padding-top: 20px;
+    color: white;
+}
+
+.footer-info {
     padding-left: 20px;
-  }
-  .footer-logos{
+}
+
+.footer-logos {
     display: flex;
     justify-content: right;
     padding-right: 20px;
     padding-bottom: 20px;
-  }
-  .logo-1{
+}
+
+.logo-1 {
     display: flex;
     width: 100px;
     height: 100px;
-    justify-content:right;
+    justify-content: right;
     padding-right: 10px;
-  }
-  
-  .logo-2{
+}
+
+.logo-2 {
     display: flex;
     width: 100px;
     justify-content: flex-end;
-  }
-  .contact-info{
+}
+
+.contact-info {
     font-weight: lighter;
     display: flex;
     justify-content: left;
-  }
-  .fav{
+}
+
+.fav {
     color: aliceblue;
-  }
+}
+
+
 
 /* this media querry is for video to not play on mobile devices. 
 Replaces video with thumbnail image. 
 Issues: have to adjust other divs,currently everything just covers image. */
-
+/*
 @media (max-width: 750px) {
-    #myVideo { display: none; }
-    body { 
-      background: url("/Images/adopt-video-thumb.png") no-repeat;
-     
+    #myVideo {
+        display: none;
+    }
+
+    body {
+        background: url("") no-repeat;
+
     }
 }
+*/
