--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -75,7 +75,7 @@ nav a {
 #myVideo {
     position: absolute;
     top: -1px;
-    width: 100vw;
+    width: 100%;
     height: 70vh;
     object-fit: cover;
     left: -9px;
@@ -84,19 +84,21 @@ nav a {
 }
 
 #myVideo__overlay {
-    background: rgba(0, 0, 0, 0.06);
+    background: rgba(0, 0, 0, 0.344);
     position: absolute;
     width: 100%;
     height: 70vh;
     top: 115px;
+    left:0;
+
 }
 
 #adopt {
     font-size: 96px;
     color: white;
     position: absolute;
-    top: 10vh;
-    left: 0;
+    top: 55vh;
+    left: 10px;
 
 
 }
@@ -106,11 +108,24 @@ h2 {
 
 }
 
+#looking-for-home-title{
+    position: relative;
+    top: 80vh;
+}
+
+#container{
+    position: relative;
+    top: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
 
 #looking-for-home-section {
-    display: flex;
-    position: absolute;
-    top: 699px;
+    justify-content: space-around;
+    flex-direction: row;
 }
 
 .petimg {
@@ -175,6 +190,17 @@ h2 {
     margin-top: 0.25em;
 }
 
+#adoption-container{
+    position: relative;
+    top: 85vh;
+}
+
+#adoption-form{
+    position: relative;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 input[type=text] {
     padding: 10px;
     margin: 10px 0;
@@ -212,7 +238,7 @@ input[type=submit] {
     padding: 10px;
     border: none;
     border-radius: 10px;
-    width: auto;
+    width: 250px;
     background-color: rgba(209, 138, 113, 1);
     font-weight: bold;
     color: white;
@@ -220,7 +246,7 @@ input[type=submit] {
     transition: .3s background-color;
     text-align: center;
     position: absolute;
-    right: 5px;
+    right: 5vw;
 
 }
 
@@ -316,6 +342,10 @@ input:focus:invalid {
 
 .footer {
     background-color: #0B334A;
+    position: relative;
+    bottom: -100vh;
+
+    
 }
 
 .footer h1 {
