--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,81 +1,97 @@
-*{
-color: darkgrey;
-font-family: 'Poppins', sans-serif;
+* {
+  color: darkgrey;
+  font-family: 'Poppins', sans-serif;
 
 }
-body{
-    background-color: #F0F0F0;
-} 
-    .grid img {
-        float: left;
-        width:  250px;
-        height: 250px;
-        object-fit: cover;
-    }
-    
-    li {
-        float: left;
-      }
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #C5E7E7;
-      }
-      .container{
-        clear:both;
-        overflow:auto;
-        background-color: #C5E7E7;
-      }
-      
-      nav{float:right;}
-      
-      .logo img{float:left; 
-    }
 
-     #leftside{
-        float: right;
-        margin: 0px 15px 15px 0px;
-    
-        
-     }
+body {
+  background-color: #F0F0F0;
+}
 
-     .rightext{
-     text-align: left;
-     }
+.grid img {
+  float: left;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
 
-     .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      
-        margin: 0 auto;
-        max-width: 1140px;
-        padding: 20px 28px;
-        grid-gap: 30px;
-        align-items: stretch;
-      }
-      
-      .card {
-        display: block;
-        border-radius: 20px;
-        box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        height: 240px;
-        
-        transition: transform 0.3s cubic-bezier(0.374, 0.019, 0.035, 1.861);
-      }
-      
-      #section{
-        flex-direction: column;
-        display: flex;
+
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #C5E7E7;
+}
+
+.container {
+  clear: both;
+  overflow: auto;
+  background-color: #C5E7E7;
+}
+
+nav {
+  float: right;
+}
+
+.logo img {
+  float: left;
+}
+
+
+#pup img{
+  width:100%;
+}
+
+
+#leftside {
+  float: right;
+  margin: 0px 15px 15px 0px;
+
+
+}
+
+.rightext {
+  text-align: left;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+
+  margin: 0 auto;
+  max-width: 1140px;
+  padding: 20px 28px;
+  grid-gap: 30px;
+  align-items: stretch;
+}
+
+.card {
+  display: block;
+  border-radius: 20px;
+  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 240px;
+
+  transition: transform 0.3s cubic-bezier(0.374, 0.019, 0.035, 1.861);
+}
+
+#section {
+  flex-direction: column;
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -87,48 +103,53 @@ body{
   font-size: 2rem;
   margin: 0;
   letter-spacing: 1rem;
-      }
+}
 
-      h1 {
-        display: flex;
-        justify-content: center;
-        padding: 20px;
-        font-size: 45px;
-        font-weight: bold;
-        font-size:150%;
+h1 {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  font-size: 45px;
+  font-weight: bold;
+  font-size: 150%;
 
-      }
-      
-      footer{
-        background-color: #0B334A;
-    }
-    .footer_badges{
-        display: inline-block;
-    }
-    #footer_images{
-        text-align: right;
-    }
-    footer h2{
-        text-align: center;
-        font-size: 46px;
-        color: white;
-    }
-    .contact-info{
-        top: 800px;
-    }
+}
 
-    .botton{
-        text-align: center;
-    }
-        .click{
-            background-color: #D18A71;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            border-radius: 20px;
-            font-family:'Poppins';
-            }
+footer {
+  background-color: #0B334A;
+}
+
+.footer_badges {
+  display: inline-block;
+}
+
+#footer_images {
+  text-align: right;
+}
+
+footer h2 {
+  text-align: center;
+  font-size: 46px;
+  color: white;
+}
+
+.contact-info {
+  top: 800px;
+}
+
+.botton {
+  text-align: center;
+}
+
+.click {
+  background-color: #D18A71;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+  font-family: 'Poppins';
+}
